feat(history_service) update syntax code